--- a/app/views/bikes/edit_alert_purchase_confirmation.html.haml
+++ b/app/views/bikes/edit_alert_purchase_confirmation.html.haml
@@ -1,7 +1,7 @@
 .primary-edit-bike-form
   .form-well-container.container{ class: "edit-bike-page-alert" }
     .row
-      = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
+      = render partial: "bikes/edit_primary_menu", locals: { is_disabled: true }
 
       .col-md-8.form-well
         .form-wrap
