--- a/app/views/bikes/scanned.html.haml
+++ b/app/views/bikes/scanned.html.haml
@@ -1,20 +1,19 @@
 .container
   %h2
     = @bike_code.kind
-    %em
-      = @bike_code.code
+    %em= @bike_code.code
     isn't linked to a bike.
   %hr.mb-4.mb-4
 
   - if current_user.present?
     - if !@bike_code.claimable_by?(current_user)
-      %h3
-        You have claimed the maximum permitted number of Bike Codes.
+      %h3 You have claimed the maximum permitted number of Bike Codes.
       %p
-        Please email #{ link_to "support@bikeindex.org", "mailto:support@bikeindex.org" } if you don't understand why you're seeing this message or if you need an exception made.
+        support_email = link_to "support@bikeindex.org", "mailto:support@bikeindex.org"
+        = "Please email #{support_email} if you don't understand why you're seeing this message or if you need an exception made."
     - else
       %p
-        You can enter the URL of the bike you would like to link this #{@bike_code.kind} to:
+        = "You can enter the URL of the bike you would like to link this #{@bike_code.kind} to:"
       = form_tag bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id), method: "PUT", class: "row" do
         .col-sm-8.col-lg-10
           .form-group
@@ -23,23 +22,22 @@
           = submit_tag "Update", class: "btn btn-success"
 
       %p{ style: "margin-top: 24px;" }
-        Or, click <em>link it</em> on of your bikes to connect it to this #{@bike_code.kind}:
+        = "Or, click <em>link it</em> on of your bikes to connect it to this #{@bike_code.kind}:"
 
       %table.table.table-striped.table-bordered.table-sm.without-exterior-border
         %thead.small-header
           %tr
             %th.date-added
-              Added&nbsp;<small class="convertTimezone"></small>
+              Added
+              %small.convertTimezone
             %th.hidden-xs-down Manufacturer
             %th.hidden-xs-down Model
             %th.hidden-xs-down Color
             %th.hidden-sm-up.hidden-sm-up
               %small
-                mnfg, model,
-                %span.less-strong
-                  color
+                mnfg, model, <span class="less-strong">color</span>
             %th
-              Link&nbsp;IT!
+              Link IT!
         %tbody
           - @bikes.each do |bike|
             %tr
@@ -55,16 +53,14 @@
                 = bike.frame_colors.to_sentence
               %td.hidden-sm-up
                 %small
-                  = bike.mnfg_name
-                  = ", #{bike.frame_model}" if bike.frame_model.present?
+                  = [bike.mnfg_name, bike.frame_model].select(&:present?)..join(", ")
                   %span.less-strong
                     = bike.frame_colors.to_sentence
                   %br
               %td
                 %small
-                  = link_to bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT" do
-                    Link&nbsp;#{@bike_code.kind}
+                  = link_to "Link #{@bike_code.kind}", bike_code_path(id: @bike_code.code, organization_id: @bike_code.organization_id, bike_id: bike.id), method: "PUT"
   - else
     %p{ style: "margin-top: 24px;" }
       To link that card with a bike,
-      = link_to "please sign in", new_session_url(return_to: "/bikes/#{@bike_code.code}/scanned?organization_id=#{@bike_code.organization_id}")
+      = link_to "please sign in", new_session_url(return_to: "bikes/#{@bike_code.code}/scanned?organization_id=#{@bike_code.organization_id}")
