--- a/app/views/bikes/_bike.html.haml
+++ b/app/views/bikes/_bike.html.haml
@@ -6,10 +6,9 @@
       %h5.title-link
         %a{ href: bike_url(bike) }
           %strong
-            - unless bike.type == 'bike'
-              = bike.type
+            = bike.type unless bike.type == 'bike'
             = [bike.year, bike.mnfg_name].reject(&:blank?).join(' ')
-          #{bike.frame_model}
+          = bike.frame_model.to_s
       %ul.attr-list
         = bike.attr_list_item(bike.serial_display, 'Serial')
         = bike.attr_list_item(bike.frame_colors.to_sentence, 'Primary colors')
