--- a/app/views/bikes/_bike_u.html.haml
+++ b/app/views/bikes/_bike_u.html.haml
@@ -12,8 +12,7 @@
             %span.serial-text
               = bike_u.serial_display
           %p
-            %span.attr-title
-              Colors
+            %span.attr-title Colors
             = bike_u.frame_colors.to_sentence
         - if bike_u.stolen
           .theft-information
@@ -32,13 +31,6 @@
                 %span.attr-title
                   Stolen on
                 = bike_u.current_stolen_record.date_stolen.strftime("%Y-%m-%d")
-            
-            /         - date_label = "Stolen"
-            /         - date_label = "Recovered" 
-            /         = bike_u.dl_list_item(bike_u.current_stolen_record.date_stolen.strftime("%Y-%m-%d"), date_label)
-            /       %dl.dl-horizontal
-            /         = bike_u.dl_list_item(bike_u.short_address(bike_u.current_stolen_record), "From")
 
-      %a.image-holder{href: bike_url(bike_u) }
-        
-        = bike_u.thumb_image 
+      %a.image-holder{ href: bike_url(bike_u) }
+        = bike_u.thumb_image
