--- a/app/views/bikes/_edit_primary_menu.html.haml
+++ b/app/views/bikes/_edit_primary_menu.html.haml
@@ -10,7 +10,8 @@
           %a{ href: edit_bike_path(page: template), class: is_active }
             %h4= description
 
-  %h3.nav-group-header #{@bike.type} Details
+  %h3.nav-group-header
+    = "#{@bike.type} Details"
   %ul
     - @bike_templates.each do |template, description|
       %li{ class: "edit-menu-#{template}" }
@@ -21,11 +22,12 @@
   .form-well-edit-page-select
     %span.menu-select-overlay
       You are editing
-    // ignore this select in dirty forms
+    -# ignore this select in dirty forms
     %select.dirtyignore
       - @edit_templates.each do |template, description|
         %option{ selected: (@edit_template == template), value: edit_bike_path(page: template) }
           = description
+
   .edit-form-well-submit-wrapper
     = hidden_field_tag :edit_template, @edit_template
     = submit_tag 'Save changes', class: 'btn btn-lg btn-primary', disabled: is_disabled
