--- a/app/views/bikes/bike_fields/_revised_component_fields.html.haml
+++ b/app/views/bikes/bike_fields/_revised_component_fields.html.haml
@@ -4,29 +4,34 @@
   - ctype_id = f.object.ctype_id
   - other_ctype_show = ctype_id == @ctype_other_id ? 'unhidden' : ''
   - other_model_show = (f.object.cmodel_name.present?) ? 'unhidden' : ''
+
   .right-input-help.remove-part
     = f.label :_destroy do
       %span.context-display-help
         &ndash;
       = f.check_box :_destroy
       Remove part
+
   .related-fields
     .form-group.row
       = f.label :ctype_id, 'Part type', class: 'form-well-label'
+
       .form-well-input.fancy-select.unfancy
         = f.collection_select(:ctype_id, Ctype.all, :id, :name, { required: true, prompt: 'Component type' }, { class: 'form-control component-ctype-input' })
-    / We really should display Position here, but we aren't right now because of implementation issues
-    / .right-input-help
-    /   - position_visibility = (f.object.front || f.object.rear) ? '' : 'hidden-other'
-    /   .groupedbtn-group{ class: position_visibility, data:  { toggle: 'buttons-radio' } }
-    /     .btn-group{ role: 'group' }
-    /       %button.btn.btn-default.ctype-position-both{ class: ('active' if f.object.both) data: { position: 'both' } }
-    /         Both
-    /       %button.btn.btn-default{ class: ('active' if f.object.front ), data: { position: 'front' } }
-    /         Front
-    /       %button.btn.btn-default{ class: ('active' if f.object.rear ), data: { position: 'rear' } }
-    /         Rear
-    /     = f.hidden_field :front_or_rear, class: 'front-or-rear'
+
+    -# We really should display Position here, but we aren't right now because of implementation issues
+    -# .right-input-help
+    -#   - position_visibility = (f.object.front || f.object.rear) ? '' : 'hidden-other'
+    -#   .groupedbtn-group{ class: position_visibility, data:  { toggle: 'buttons-radio' } }
+    -#     .btn-group{ role: 'group' }
+    -#       %button.btn.btn-default.ctype-position-both{ class: ('active' if f.object.both) data: { position: 'both' } }
+    -#         Both
+    -#       %button.btn.btn-default{ class: ('active' if f.object.front ), data: { position: 'front' } }
+    -#         Front
+    -#       %button.btn.btn-default{ class: ('active' if f.object.rear ), data: { position: 'rear' } }
+    -#         Rear
+    -#     = f.hidden_field :front_or_rear, class: 'front-or-rear'
+
     .form-group.row.hidden-other.hidden-ctype{ class: other_ctype_show }
       = f.label :ctype_other, 'Unknown part type', class: 'form-well-label'
       .form-well-input
