--- a/app/views/bikes/edit_publicize.html.haml
+++ b/app/views/bikes/edit_publicize.html.haml
@@ -3,7 +3,7 @@
 
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
+      = render partial: "bikes/edit_primary_menu", locals: { is_disabled: true }
 
       .col-md-8.form-well#form_well_wrap
         - if @bike.current_stolen_record&.display_checklist?
@@ -11,32 +11,36 @@
             .form-well-form-header-always-visible
               %h3.header-font-alt
                 Do these things for the best chance of recovery!
-            = render partial: "/bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
+
+            = render partial: "bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
 
         .form-wrap{ class: @bike.current_stolen_record&.display_checklist? ? "secondary-form-wrap" : "" }
           .form-well-form-header
-            / Publicize Theft
+            -# Publicize Theft
             %h3= @edit_templates[@edit_template]
 
           %h5.description
-            Share your listing - so everyone knows to watch out for your
-            #{@bike.type}!
+            = "Share your listing - so everyone knows to watch out for your #{@bike.type}!"
 
-          / TODO: Consolidate social urls in helpers
+          -# TODO: Consolidate social urls in helpers
           .no-divider-row.full-width-button.btn-share
-            %a.bth.btn-lg.link-share{href: "http://www.facebook.com/share.php?u=#{bike_url(@bike)}", target: "_blank"}
-              %img{ src: "https://files.bikeindex.org/facebook.png" }
+            - facebook_image_url = "https://files.bikeindex.org/facebook.png"
+            - facebook_share_url =  "http://www.facebook.com/share.php?u=#{bike_url(@bike)}"
+
+            = link_to facebook_share_url, target: "_blank", class: "bth btn-lg link-share" do
+              = image_tag facebook_image_url
               .share-social.share-facebook Share on Facebook
 
           .no-divider-row.full-width-button.btn-share
+            - tweet_text = "Help me find my stolen bike!"
             %a.twitter-share-button{href: "https://twitter.com/share?ref_src=twsrc%5Etfw",
-                                    "data-text" => "Help me find my stolen bike!",
+                                    "data-text" => tweet_text,
                                     "data-hashtags" => "bikeindex",
                                     "data-related" => "BikeIndex",
                                     "data-show-count" => false,
                                     "data-size" => "large",
                                     "data-url" => bike_url(@bike)}
             %script{src: "https://platform.twitter.com/widgets.js", charset: "utf-8"}
-            %a{href: "https://twitter.com/share?url=#{bike_url(@bike)}&text=Help me find my stolen bike!",
+            %a{href: "https://twitter.com/share?url=#{bike_url(@bike)}&text=#{tweet_text}",
                target: "_blank"}
               .share-social.share-twitter Share on Twitter
