--- a/app/views/bikes/edit_remove.html.haml
+++ b/app/views/bikes/edit_remove.html.haml
@@ -1,18 +1,20 @@
 = form_for @bike, multipart: true, html: { class: 'primary-edit-bike-form' } do |f|
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: '/bikes/edit_primary_menu', locals: { is_disabled: true }
+      = render partial: 'bikes/edit_primary_menu', locals: { is_disabled: true }
+
       .col-md-8.form-well
         .form-wrap
           .form-well-form-header
-            %h3
-              #{@edit_templates[@edit_template]} #{@bike.type}
+            %h3= "#{@edit_templates[@edit_template]} #{@bike.type}"
+
           .related-fields.hide-this-bike.no-divider-row
             .form-group.row
               - hide_toggle = @bike.user_hidden ? 'Un-hide' : 'Hide'
               .hide-this-bike-link
                 %a.collapsed{ href: '#hide_bike_toggle_group', data: { toggle: 'collapse' } }
-                  #{hide_toggle} this #{@bike.type}
+                  = "#{hide_toggle} this #{@bike.type}"
+
               .collapse#hide_bike_toggle_group
                 - if @bike.user_hidden
                   = f.hidden_field :marked_user_unhidden
@@ -23,27 +25,28 @@
                     %strong
                       Keeping your bike public is the best way to help recover stolen bikes and deter theft.
                   %p
-                    You can read more about why this is important to us in our #{link_to "FAQs", support_path(anchor: 'public-serials')}.
+                    = "You can read more about why this is important to us in our #{link_to "FAQs", support_path(anchor: 'public-serials')}."
                   %p
-                    We strongly recommend keeping your #{@bike.type} visible, but you can hide this #{@bike.type} if you prefer. Even though we don't think it's a good idea. You can always toggle this setting to show and hide a bike.
+                    = "We strongly recommend keeping your #{@bike.type} visible, but you can hide this #{@bike.type} if you prefer. Even though we don't think it's a good idea. You can always toggle this setting to show and hide a bike."
                   %p.text-xs-center
                     - btn_type = @bike.user_hidden ? 'btn-success' : 'btn-danger'
                     %a.btn.btn-lg#hide_bike_toggle{role: 'button', class: btn_type }
-                      #{hide_toggle} #{@bike.type}
+                      = "#{hide_toggle} #{@bike.type}"
 
           %hr
 
           .delete-from-index.no-divider-row
             %a{data: { toggle: 'modal', target: '#request-delete' } }
-              = render '/shared/trash_icon'
-              Delete this #{@bike.type} from Bike Index
+              = render 'shared/trash_icon'
+              = "Delete this #{@bike.type} from Bike Index"
 
 
 - modal_body = capture_haml do
   = form_tag do |t|
     .modal-body
-      = render partial: '/shared/alert', locals: { body: "Please fill in the reason for the #{@bike.type} deletion", title: 'We want to know why!', class_names: 'currently-hidden' }
+      = render partial: 'shared/alert', locals: { body: "Please fill in the reason for the #{@bike.type} deletion", title: 'We want to know why!', class_names: 'currently-hidden' }
       = hidden_field_tag :bike_delete_bike_id, @bike.id
+
       .form-group
         %label{ for: :bike_delete_reason }
           Reason for deletion
@@ -55,4 +58,5 @@
         .col-xs-6.col-xs-pull-6
           %button.btn.btn-secondary{ 'data-dismiss' => 'modal', type: 'button' }
             Nevermind
-= render partial: '/shared/modal', locals: { title: "Are you sure you want to delete this #{@bike.type}?", id: 'request-delete', modal_body: modal_body }
+
+= render partial: 'shared/modal', locals: { title: "Are you sure you want to delete this #{@bike.type}?", id: 'request-delete', modal_body: modal_body }
