--- a/app/views/bikes/edit_report_recovered.html.haml
+++ b/app/views/bikes/edit_report_recovered.html.haml
@@ -4,28 +4,28 @@
 
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: "/bikes/edit_primary_menu", locals: { is_disabled: true }
+      = render partial: "bikes/edit_primary_menu", locals: { is_disabled: true }
 
       - if @bike.stolen? && @bike.find_current_stolen_record.present? && !@bike.recovered?
         .col-md-8.form-well#form_well_wrap
           .form-wrap
             .form-well-form-header
-              / Mark This Bike Recovered
+              -# Mark This Bike Recovered
               %h3= @edit_templates[@edit_template]
             .no-divider-row.full-width-button
               %a.btn.btn-success.btn-lg{data: { toggle: "modal", target: "#toggle-stolen" } }
-                This #{@bike.type} has been returned!
+                = "This #{@bike.type} has been returned!"
 
 
 - modal_title = "We're so glad you got your #{@bike.type} back!"
 
 - alert_body = capture_haml do
-  %p Please tell us how you got your #{@bike.type} back, we really care!
+  %p= "Please tell us how you got your #{@bike.type} back, we really care!"
   %p It"s how we get better at recovering bikes.
 
 - modal_body = capture_haml do
   .modal-body
-    = render partial: '/shared/alert', locals: { body: alert_body, title: 'Not enough information!', class_names: 'currently-hidden' }
+    = render partial: 'shared/alert', locals: { body: alert_body, title: 'Not enough information!', class_names: 'currently-hidden' }
     = form_tag do |t|
       = hidden_field_tag :mark_recovered_bike_id, @bike.id
       = hidden_field_tag :mark_recovered_stolen_record_id, (@bike.current_stolen_record_id if @bike.current_stolen_record_id.present?)
@@ -50,5 +50,4 @@
               Nevermind
 
 / Only one modal if stolen, only one (different) modal if not stolen
-= render partial: "/shared/modal", |
-  locals: { title: modal_title, id: "toggle-stolen", modal_body: modal_body }
+= render partial: "shared/modal", locals: { title: modal_title, id: "toggle-stolen", modal_body: modal_body }
