--- a/app/views/bikes/edit_report_stolen.html.haml
+++ b/app/views/bikes/edit_report_stolen.html.haml
@@ -1,17 +1,18 @@
 / Integrates with app/assets/javascripts/revised/pages/bikes/edit_stolen.coffee
+
 = form_for @bike, multipart: true, html: { class: "primary-edit-bike-form stolenEditPage" } do |f|
   = f.hidden_field :stolen
 
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: "/bikes/edit_primary_menu"
+      = render partial: "bikes/edit_primary_menu"
 
       - unless (@bike.stolen? and @bike.find_current_stolen_record.present?)
         .col-md-8.form-well#form_well_wrap
           .form-wrap
             .form-well-form-header
-              / Report Stolen or Missing
+              -# Report Stolen or Missing
               %h3= @edit_templates[@edit_template]
             .no-divider-row.full-width-button
               %a.btn.btn-danger.btn-lg#mark-stolen-btn
-                This #{@bike.type} is stolen or missing!
+                = "This #{@bike.type} is stolen or missing!"
