--- a/app/views/bikes/edit_theft_details.html.haml
+++ b/app/views/bikes/edit_theft_details.html.haml
@@ -3,7 +3,7 @@
 
   .form-well-container.container{ class: "edit-bike-page-#{@edit_template}" }
     .row
-      = render partial: '/bikes/edit_primary_menu'
+      = render partial: 'bikes/edit_primary_menu'
 
       .col-md-8.form-well#form_well_wrap
         - if @bike.current_stolen_record&.display_checklist?
@@ -11,16 +11,18 @@
             .form-well-form-header-always-visible
               %h3.header-font-alt
                 Do these things for the best chance of recovery!
-            = render partial: "/bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
+            = render partial: "bikes/stolen_checklist", locals: { stolen_record: @bike.current_stolen_record }
+
         .form-wrap{ class: @bike.current_stolen_record&.display_checklist? ? "secondary-form-wrap" : "" }
           .form-well-form-header
-            / Theft Details
+            -# Theft Details
             %h3= @edit_templates[@edit_template]
 
-          / Helper text display
+          -# Helper text display
           - stolen_type = @bike.recovered ? 'recovered' : 'stolen'
           = f.fields_for :stolen_records do |srecord|
             - next unless srecord.object.current # Because they may have multiple stolen records
+
             %h3
             .form-group.row.unnested-field
               = srecord.hidden_field :timezone, value: "", class: "hiddenFieldTimezone"
@@ -39,7 +41,7 @@
               .form-well-input
                 = srecord.text_field :secondary_phone, class: 'form-control'
 
-            = render partial: '/bikes/bike_fields/stolen_location', locals: { srecord: srecord, stolen_type: stolen_type }
+            = render partial: 'bikes/bike_fields/stolen_location', locals: { srecord: srecord, stolen_type: stolen_type }
 
             .form-group.row.unnested-field
               = srecord.label :estimated_value, class: 'form-well-label'
@@ -57,7 +59,6 @@
                 = srecord.label :lock_defeat_description, class:  'form-well-label'
                 .form-well-input
                   = srecord.select(:lock_defeat_description, StolenRecord.locking_defeat_description_select, prompt: '')
-            / -- unless @bike.recovered?
 
             .form-group.row.unnested-field
               - description_label = @bike.recovered ? "How did you recovered the #{@bike.type}" : 'Description of the incident'
@@ -80,14 +81,15 @@
             .form-group.row.unnested-field.full-width-section.no-divider-row
               %label
                 = srecord.check_box :proof_of_ownership
-                Do you have proof of ownership of this #{@bike.type}?
+                = "Do you have proof of ownership of this #{@bike.type}?"
               .full-width-checkbox-help
-                If this #{@bike.type} was added to the Index by a bike shop, that counts as proof of ownership
+                = "If this #{@bike.type} was added to the Index by a bike shop, that counts as proof of ownership"
             %hr
             .form-group.row.unnested-field.full-width-section.no-divider-row
               %label
                 = srecord.check_box :receive_notifications
-                Receive notifications from Bike Index about this stolen #{@bike.type}
+                = "Receive notifications from Bike Index about this stolen #{@bike.type}"
               .full-width-checkbox-help
                 e.g. if we tweet about it or see someone searching for its serial number
-            = render "/shared/form_well_footer_save"
+
+            = render "shared/form_well_footer_save"
