--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -1,8 +1,8 @@
 - serial_help_content = "Every bike has a unique serial number, it's how they are identified. To learn more or see some examples, go to #{link_to 'our serial page', serials_url, target: '_blank' } <small>(opens in a separate window)</small>."
 
 .form-well-header.container
-  %h1
-    Enter #{@bike.type} details
+  %h1= "Enter #{@bike.type} details"
+
 = form_for @bike, multipart: true do |f|
   = f.hidden_field :b_param_id_token, value: @b_param&.id_token
   - if @organization.present?
@@ -13,6 +13,7 @@
 
   - if @bike.recovered
     = f.hidden_field :recovered, value: true
+
   .form-well-container.container
     .row
       .col-lg-8.offset-lg-2.form-well
@@ -32,11 +33,11 @@
               #made-without-serial-input
                 %label
                   = f.check_box :made_without_serial
-                  This #{@bike.type} was made without a serial
+                  = "This #{@bike.type} was made without a serial"
               .below-input-help#made-without-serial-help
                 .hidden-other
                   %a{ data: { toggle: 'modal', target: '#made-without-serial-modal' } }
-                    This #{@bike.type} was made without a serial number
+                    = "This #{@bike.type} was made without a serial number"
             .right-input-help
               %label.made-without-serial-checkbox
                 = check_box_tag :has_no_serial, true, @bike.serial_unknown?, tabindex: -1
@@ -45,11 +46,13 @@
           .related-fields
             .form-group.row
               = f.label :manufacturer_id, class: 'form-well-label'
+
               .form-well-input
                 - initial = @bike.manufacturer && { id: @bike.manufacturer.id, text: @bike.manufacturer.name }.to_json
                 = f.text_field :manufacturer_id, value: @bike.manufacturer && @bike.manufacturer.name, class: 'form-control unfancy', data: { initial: initial }
                 %span.below-input-help
                   Select 'Other' if manufacturer doesn't show up when entered
+
             .form-group.hidden-other.row
               = f.label :manufacturer_other, 'Other manufacturer', class: 'form-well-label'
               .form-well-input
@@ -71,7 +74,7 @@
               = f.text_field :frame_model, class: 'form-control'
 
           - classname = (@b_param.display_email? ? '' : 'no-divider-row')
-          = render partial: '/bikes/bike_fields/revised_colors', locals: { f: f, classname: classname }
+          = render partial: 'bikes/bike_fields/revised_colors', locals: { f: f, classname: classname }
 
           - if @bike.stolen || @organization&.include_field_reg_phone?(current_user)
             - label_phone = @organization&.registration_field_label("reg_phone") || "Phone"
@@ -82,7 +85,7 @@
 
           - if @bike.stolen
             = fields_for @stolen_record do |srecord|
-              = render partial: '/bikes/bike_fields/stolen_location', locals: { srecord: srecord }
+              = render partial: 'bikes/bike_fields/stolen_location', locals: { srecord: srecord }
 
           - if @organization&.include_field_reg_address?(current_user)
             .related-fields
@@ -134,10 +137,7 @@
 - modal_body = capture_haml do
   .modal-body
     %p
-      Very
-      %em
-        very
-      few bikes are made without serials. Unless this #{@bike.type}:
+      = "Very <em>very</em> few bikes are made without serials. Unless this #{@bike.type}:"
     %ul
       %li
         Was made before 1970
@@ -148,9 +148,9 @@
     %p
       It probably has a serial number.
     %p
-      Read about #{link_to 'how to find your serial number', serials_url, target: '_blank' }
-      %small
-        (opens in a separate window)
+      - how_to_find_link = link_to 'how to find your serial number', serials_url, target: "_blank"
+      = "Read about #{how_to_find_link} <small>(opens in a separate window)</small>".html-safe
+
   .modal-btn-footer
     .row
       .col-xs-6
@@ -160,6 +160,6 @@
       .col-xs-6
         %button.btn.btn-danger#made-without-serial-button{type: 'button'}
           I'm 100% sure
-        This #{@bike.type} was made without a serial
+        = "This #{@bike.type} was made without a serial"
 
-= render partial: '/shared/modal', locals: { title: 'Are you certain?', id: 'made-without-serial-modal', modal_body: modal_body }
+= render partial: 'shared/modal', locals: { title: 'Are you certain?', id: 'made-without-serial-modal', modal_body: modal_body }
