--- a/app/views/bikes/show.html.haml
+++ b/app/views/bikes/show.html.haml
@@ -9,7 +9,9 @@
         HIDDEN by owner
         %small.less-strong
           no one but the user (and Bike Index admins) can see it
-  / Authorize check here, even though we're checking in controller too, because otherwise we're displaying user data
+
+  -# Authorize check here, even though we're checking in controller too, because
+  -# otherwise we're displaying user data
   - if current_user.present? && passive_organization.present? && current_user.authorized?(passive_organization)
     = render partial: "organized_access_panel"
   .row
@@ -41,7 +43,7 @@
     .col-md-4.ad-col
       .ad-block#top468x60
   .row
-    / Bike Photo!
+    -# Bike Photo!
     .col-md-8
       .bike-photos.horizontal-thumbnails
         - if @bike.public_images.any?
@@ -153,9 +155,9 @@
                         = component.component_type.titleize if component.component_type.present?
                     = component.description
                     - if component.year.present? ||  component.cmodel_name.present? || component.manufacturer.present?
-                      #{component.cmodel_name}
+                      = "#{component.cmodel_name}"
                       = "#{component.year}" if component.year.present?
-                      (#{component.manufacturer_name})
+                      = "(#{component.manufacturer_name})"
     .col-md-4
       .social-share-bike
         %h4
@@ -163,18 +165,18 @@
             Spread the word!
           - else
             Share it!
-        = render '/shared/share_this'
+        = render 'shared/share_this'
       - if @bike.display_contact_owner?(current_user)
         .contact-the-owner
           %p.preface
             %em
-              Know something about this #{@bike.type}?
+              = "Know something about this #{@bike.type}?"
           %h3
             Contact the owner
           - if @bike.recovered
             %p
               Is this your bike? Send proof of ownership (such as the bike's serial number or a link to a photo of you with the bike)
-          - redirect = new_session_url(return_to: "/bikes/#{@bike.id}?contact_owner=true") unless current_user.present?
+          - redirect = new_session_url(return_to: "bikes/#{@bike.id}?contact_owner=true") unless current_user.present?
           #write_them_a_message.collapse{ class: ("in" unless @contact_owner_open), data: { redirect: redirect } }
             %a.btn.btn-primary.btn-lg{ href: '#new_stolen_message', 'aria-controls' => 'new_stolen_message', 'data-toggle' => 'collapse' }
               Write them a message
@@ -194,6 +196,6 @@
                 Or call
               %strong
                 Owner's phone number:
-              %a{ href: "tell:#{@stolen_record.phone}" }
+              %a{ href: "tel:#{@stolen_record.phone}" }
                 = @stolen_record.phone_display
       .ad-block#right300x600
