--- a/app/views/shared/_faq.html.haml
+++ b/app/views/shared/_faq.html.haml
@@ -60,10 +60,8 @@
         %p= t(".free_to_transfer")
 
         %p.steps= t(".go_to_edit_page")
-        = image_tag "home/transfer_shot1.png", alt: "Click to reveal the transfer fields", class: "demo-screen"
 
         %p.steps= t(".reveal_owner_email_html")
-        = image_tag "home/transfer_shot2.png", alt: "Click to reveal the transfer fields", class: "demo-screen"
 
       %dt.collapse-faq
         %a.collapsed{ href: "#how-vendor", data: { toggle: "collapse"} }
@@ -92,7 +90,7 @@
           %p
             %strong= t(".add_details")
           %p= t(".comprehensive_public_database")
-          %p= t(".visit_or_add_html", visit_link: link_to(t(".stolen_bikes_link"), stolen_bikes_url), add_link: link_to(t(".add_a_stolen_bike_link"), new_bike_url(stolen: true)))
+          %p= t(".visit_or_add_html", add_link: link_to(t(".add_a_stolen_bike_link"), new_bike_url(stolen: true)))
 
       %dt.collapse-faq
         %a.collapsed{ href: "#does-this-prevent-theft", data: { toggle: "collapse"} }
