--- a/app/views/bikes/new.html.haml
+++ b/app/views/bikes/new.html.haml
@@ -149,7 +149,7 @@
       It probably has a serial number.
     %p
       - how_to_find_link = link_to 'how to find your serial number', serials_url, target: "_blank"
-      = "Read about #{how_to_find_link} <small>(opens in a separate window)</small>".html-safe
+      = "Read about #{how_to_find_link} <small>(opens in a separate window)</small>".html_safe
 
   .modal-btn-footer
     .row
